# Machine-Learning

./: .gitignore  README.md  pyproject.toml
Book's codes/: Chapter 1.ipynb  Chapter 2.ipynb
Book's codes/Chapter 3/: Chapter 3.ipynb
Book's codes/Chapter 4/: Chappter 4.ipynb
Book's codes/logs/train/: events.out.tfevents.1774112284.PCDISIMONE.17028.0.v2  events.out.tfevents.1774112387.PCDISIMONE.17028.2.v2  events.out.tfevents.1774115161.PCDISIMONE.17028.4.v2
Book's codes/logs/validation/: events.out.tfevents.1774112289.PCDISIMONE.17028.1.v2  events.out.tfevents.1774112390.PCDISIMONE.17028.3.v2  events.out.tfevents.1774115189.PCDISIMONE.17028.5.v2
Lab 1/: Introduction_to_Pandas,_Matplotlib_and_Linear_Regression.ipynb
Lab 1-20260205/: Introduction_to_Pandas,_Matplotlib_and_Linear_Regression.ipynb
Lab 10/: Word_embeddings.ipynb
Lab 11/: RNN.ipynb
Lab 11/data/checkpoints/: model_epoch_1.weights.h5  model_epoch_2.weights.h5  model_epoch_3.weights.h5  model_epoch_4.weights.h5  model_epoch_5.weights.h5
Lab 11/datasets/: ex1-0.txt  ex1-1.txt
Lab 2/: EDA_Lab_Student.ipynb
Lab 2 - 3/: EDA_Lab_Student.ipynb
Lab 5/: KNN_SVM_KMEANS.ipynb
Lab 6/: ANN_mnist.ipynb
Lab 7/: ANN_limitation.ipynb
Lab 8-9/: CNN_student_L89.ipynb
